Product-demo/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: genai-pm
spec:
  selector:
    app: genai-pm-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
